# sznn

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  README.md  index.ts  jest.config.js  nx.json  package.json  tsconfig.json  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
bench/: index.html  index.ts  package.json  tsconfig.json  webpack.config.js
bench/backends/: js.ts  wasm.ts  webgpu.ts
bench/utils/: cv.ts  image_net.ts
common/attr/: padding.ts
core/: model.ts  perf.ts
core/attr/: conv.ts  padding.ts  pooling.ts  slice.ts
examples/classify/: image_net.ts  index.html  index.ts  package.json  tsconfig.json  webpack.config.js
examples/common/: cv.ts
examples/shared/: cv.ts  utils.ts
examples/transfer/: global.css  index.html  index.ts  package.json  spin.css  tsconfig.json  webpack.config.js
js/: .npmignore  handler.ts  jest.config.js  layer.ts  model.ts  package.json  tensor.ts  tensor_pool.ts  tsconfig.json  webpack.config.js
js/layers/: abs.ts  batchnorm.ts  binaryop.ts  cast.ts  concat.ts  constant.ts  conv.ts  dropout.ts  floor.ts  gather.ts  instancenorm.ts  pad.ts  pooling.ts  relu.ts  reshape.ts  shape.ts  slice.ts  softmax.ts  unaryop.ts  unsqueeze.ts  upsample.ts
js/src/: handler.ts  index.ts  model.ts  tensor.ts
js/src/layers/: batchnorm.ts  binaryop.ts  concat.ts  conv.ts  instancenorm.ts  (+6 more)
js/test/: binaryop.spec.ts  concat.spec.ts  conv.spec.ts  gather.spec.ts  pad.spec.ts  padding.spec.ts  pooling.spec.ts  relu.spec.ts  slice.spec.ts  softmax.spec.ts  upsample.spec.ts
test/: binaryop.spec.ts  concat.spec.ts  conv.spec.ts  floor.spec.ts  gather.spec.ts  hello.spec.ts  instancenorm.spec.ts  pad.spec.ts  pooling.spec.ts  relu.spec.ts  slice.spec.ts  softmax.spec.ts  upsample.spec.ts
tools/schedule/: detect.html
utils/: cv.ts  image.ts
wasm/: .npmignore  bootstrap.js  bootstrap.ts  index.js  index.ts  model.ts  package.json  tensor.ts  tsconfig.json  webpack.config.js  webpack.test.js
wasm/rs/: Cargo.toml
wasm/src/: bootstrap.ts  handler.ts  index.ts  model.ts  tensor.ts  worker.ts
wasm/src/rs/: Cargo.toml  rust-toolchain.toml
wasm/src/rs/src/: lib.rs  tensor.rs
wasm/src/rs/src/layers/: abs.rs  batchnorm.rs  cast.rs  concat.rs  conv.rs  dropout.rs  gather.rs  mod.rs  padding.rs  pooling.rs  relu.rs  reshape.rs  shape.rs  slice.rs  unaryop.rs  unsqueeze.rs
wasm/src/rs/src/layers/binaryop/: add.rs  div.rs  mod.rs  mul.rs  sub.rs
wasm/src/rs/src/layers/unaryop/: abs.rs  acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  ceil.rs  cos.rs  cosh.rs  floor.rs  identity.rs  log.rs  mod.rs  neg.rs  round.rs  sigmoid.rs  sign.rs  sin.rs  sinh.rs  sqrt.rs  tan.rs  tanh.rs
wasm/src/rs/tests/: abs.rs
wasm/test/: abs.spec.ts  binaryop.spec.ts  conv.spec.ts  index.ts  instancenorm.spec.ts  padding.spec.ts  pooling.spec.ts  unaryop.spec.ts
webgpu/: .npmignore  package.json  tsconfig.json  webpack.config.js  webpack.test.js
webgpu/src/: gpu.ts  handler.ts  index.ts  model.ts  tensor.ts  utils.ts
webgpu/test/: abs.spec.ts  conv.spec.ts  instancenorm.spec.ts  padding.spec.ts  pooling.spec.ts  relu.spec.ts  unaryop.spec.ts
(+33 files in other folders)
