cargo-features = ["edition2021"]

[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"
js-sys = "0.3.56"
console_error_panic_hook = "0.1.6"
web-sys = { version="0.3.56", features= ["console"] }

# [package.metadata.wasm-pack.profile.dev]
# wasm-opt = ["-Os"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
# TODO: bug?
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false

[profile.release]
lto = true
