cargo-features = ["edition2021"]

[package]
name = "sznn_wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "sznn_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "= 0.2.78"
rayon = "= 1.5.1"
wasm-bindgen-rayon = "= 1.0.3"
js-sys = "= 0.3.55"
console_error_panic_hook = "= 0.1.7"
web-sys = { version="= 0.3.55", features= ["console"] }

[dev-dependencies]
wasm-bindgen-test = "= 0.3.28"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

# wasm-opt is disabled when use wasm-bindgen, it is a feature not a bug;
# See for https://bytecodealliance.github.io/cargo-wasi/wasm-opt.html#disabled-when-wasm-bindgen-is-used more details.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false

[profile.release]
lto = true
